build: migrate to v18 application builder (#405)
* build: migrate to v18 application builder

* fix: updates to use app builder

* chore: restore downgraded deps

* build(ide): remove WebStorm configs

--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,12 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/chrislb/browser",
+            "outputPath": {
+              "base": "dist/chrislb"
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
@@ -62,7 +63,13 @@
                 "bundleName": "swiper"
               }
             ],
-            "scripts": []
+            "scripts": [],
+            "browser": "src/main.ts",
+            "server": "src/main.server.ts",
+            "prerender": {
+              "routesFile": "routes-file.txt"
+            },
+            "ssr": false
           },
           "configurations": {
             "production": {
@@ -81,9 +88,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
@@ -140,63 +145,6 @@
             ],
             "scripts": []
           }
-        },
-        "server": {
-          "builder": "@angular-devkit/build-angular:server",
-          "options": {
-            "outputPath": "dist/chrislb/server",
-            "main": "server.ts",
-            "tsConfig": "tsconfig.server.json",
-            "inlineStyleLanguage": "scss",
-            "stylePreprocessorOptions": {
-              "includePaths": ["src/sass"]
-            },
-            "assets": ["src/content"]
-          },
-          "configurations": {
-            "production": {
-              "outputHashing": "media"
-            },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "sourceMap": true,
-              "extractLicenses": false,
-              "vendorChunk": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve-ssr": {
-          "builder": "@angular-devkit/build-angular:ssr-dev-server",
-          "configurations": {
-            "development": {
-              "browserTarget": "chrislb:build:development",
-              "serverTarget": "chrislb:server:development"
-            },
-            "production": {
-              "browserTarget": "chrislb:build:production",
-              "serverTarget": "chrislb:server:production"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
-        "prerender": {
-          "builder": "@angular-devkit/build-angular:prerender",
-          "options": {
-            "routes": ["/"]
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "chrislb:build:production",
-              "serverTarget": "chrislb:server:production"
-            },
-            "development": {
-              "browserTarget": "chrislb:build:development",
-              "serverTarget": "chrislb:server:development"
-            }
-          },
-          "defaultConfiguration": "production"
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
