--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "start": "ng serve",
     "start:public": "ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
+    "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "dev:ssr": "ng run chrislb:serve-ssr",
-    "serve:ssr": "node dist/chrislb/server/main.js",
-    "build:ssr": "ng build && ng run chrislb:server",
-    "prerender": "ng run chrislb:prerender --routes-file routes-file.txt",
     "lint": "ng lint",
     "format:check": "prettier --check",
     "format:check:all": "pnpm run format:check -- .",
@@ -21,15 +18,14 @@
     "lint-staged": "lint-staged",
     "git-hooks": "husky",
     "cms-server": "npx decap-server",
-    "prebuild": "pnpm run generate-all",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
-    "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html",
     "generate-all": "tsm scripts/src/generators/all-generators.ts",
     "generate-images-lists": "tsm scripts/src/generators/images-lists-generators.ts",
     "generate-contents": "tsm scripts/src/generators/content-generators.ts",
     "generate-routes-file": "tsm scripts/src/generators/routes-file-generator.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
-    "lighthouse-ci": "npx @lhci/cli autorun"
+    "lighthouse-ci": "npx @lhci/cli autorun",
+    "serve:ssr:chrislb": "node dist/chrislb/server/server.mjs"
   },
   "packageManager": "pnpm@9.4.0",
   "private": true,
