--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "git-hooks": "husky",
     "cms-server": "npx decap-server",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
-    "generate-all": "tsm scripts/src/generators/all-generators.ts",
-    "generate-images-lists": "tsm scripts/src/generators/images-lists-generators.ts",
-    "generate-contents": "tsm scripts/src/generators/content-generators.ts",
-    "generate-routes-file": "tsm scripts/src/generators/routes-file-generator.ts",
+    "generate": "tsm scripts/src/generators/all-generators.ts",
+    "generate:images-lists": "tsm scripts/src/generators/images-lists-generators.ts",
+    "generate:contents": "tsm scripts/src/generators/content-generators.ts",
+    "generate:routes-file": "tsm scripts/src/generators/routes-file-generator.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
     "lighthouse-ci": "npx @lhci/cli autorun",
     "serve:ssr:chrislb": "node dist/chrislb/server/server.mjs"
