--- a/renovate.json5
+++ b/renovate.json5
@@ -1,61 +1,78 @@
 {
-  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
+  // 👇 Defined in https://github.com/renovatebot/renovate/blob/37.0.2/lib/config/presets/internal/config.ts
   extends: [
-    "config:recommended",
-    "config:best-practices",
-    "config:js-app",
-    "github>davidlj95/renovate-config:angular/v18-lts",
+    'config:recommended',
+    'config:best-practices',
+    'config:js-app',
+    'github>davidlj95/renovate-config:angular/v18-lts',
   ],
   prHourlyLimit: 0,
   prConcurrentLimit: 5,
-  schedule: ["at 9:00 am on the 1-7 day of the month on Saturday"],
-  timezone: "Europe/Madrid",
-  labels: ["dependencies"],
+  schedule: [
+    // Validate using https://codepen.io/rationaltiger24/full/ZExQEgK
+    // Though even if that says is valid, maybe invalid 🙃 as it wants 0 errors despite compiling
+    // So to be sure, `npm i later` on a tmp dir, `var later = require('later')' and check
+    // `later.parse.text('whatever schedule')` returns no errors (-1)
+    'at 9:00 am on the 1-7 day of the month on Saturday',
+  ],
+  timezone: 'Europe/Madrid',
+  labels: ['dependencies'],
   packageRules: [
+    // Semantic commit messages & PR titles. Mocks @dependabot ones:
+    // build(deps) for production dependencies, build(deps-dev) for dev dependencies (see below)
+    // ℹ️ If placing this 👇 commit type and scope default in root config doesn't work. Most probably the config
+    // presets override that
     {
-      matchFileNames: ["**/*"],
-      semanticCommitType: "build",
-      semanticCommitScope: "deps-dev",
+      matchFileNames: ['**/*'],
+      semanticCommitType: 'build',
+      semanticCommitScope: 'deps-dev',
     },
     {
-      matchDepTypes: ["dependencies"],
-      semanticCommitScope: "deps",
+      matchDepTypes: ['dependencies'],
+      semanticCommitScope: 'deps',
+    },
+    // Tagging
+    {
+      matchManagers: ['github-actions'],
+      addLabels: ['github-actions'],
     },
     {
-      matchManagers: ["github-actions"],
-      addLabels: ["github-actions"],
+      matchCategories: ['js'],
+      addLabels: ['javascript'],
     },
     {
-      matchCategories: ["js"],
-      addLabels: ["javascript"],
+      matchCategories: ['node'],
+      addLabels: ['node'],
     },
+    // Auto-merge minor/patch production ones & dev dependencies
     {
-      matchCategories: ["node"],
-      addLabels: ["node"],
-    },
-    {
-      matchUpdateTypes: ["minor", "patch", "pin", "digest"],
+      matchUpdateTypes: ['minor', 'patch', 'pin', 'digest'],
       automerge: true,
     },
     {
-      matchDepTypes: ["devDependencies"],
+      matchDepTypes: ['devDependencies'],
       automerge: true,
     },
+    // Keep in Angular v18 til manually upgrading
     {
-      allowedVersions: "^18",
-      matchPackageNames: ["@angular{/,}**"],
+      // 👇 Includes devkit & eslint
+      matchDepNames: ['@angular{/,}**'],
+      allowedVersions: '^18',
+    },
+    // Font Awesome & Angular v18
+    // https://github.com/FortAwesome/angular-fontawesome#compatibility-table
+    {
+      matchDepNames: ['@fortawesome/angular-fontawesome'],
+      allowedVersions: '0.15.x',
     },
     {
-      matchPackageNames: ["@fortawesome/angular-fontawesome"],
-      allowedVersions: "0.15.x",
-    },
-    {
-      matchPackageNames: [
-        "@fortawesome/fontawesome-svg-core",
-        "@fortawesome/free-brands-svg-icons",
-        "@fortawesome/free-solid-svg-icons",
+      matchDepNames: [
+        '@fortawesome/fontawesome-svg-core',
+        '@fortawesome/free-brands-svg-icons',
+        '@fortawesome/free-solid-svg-icons',
       ],
-      allowedVersions: "5.x || 6.x",
+      allowedVersions: '5.x || 6.x',
     },
   ],
 }
