--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "angular-eslint": "18.4.0",
     "browser-sync": "3.0.2",
     "dotenv": "16.4.5",
-    "eslint": "^9.13.0",
+    "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.1.6",
     "imagekit": "5.2.0",
