--- a/.github/workflows/reusable-lint.yml
+++ b/.github/workflows/reusable-lint.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
       - name: Run linter
-        run: cd .ci && make lint
+        run: pnpm run lint
