--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@angular-devkit/build-angular": "18.2.12",
     "@angular/cli": "18.2.12",
     "@angular/compiler-cli": "18.2.12",
+    "@eslint/compat": "1.2.3",
     "@lhci/cli": "0.14.0",
     "@types/compression": "1.7.5",
     "@types/express": "4.17.21",
