build(lint): migrate to ESLint v9 with flat config (#459)
* build(lint): remove linting system

* build(lint): add ESLint via Angular ESLint

* build(lint): revert to eslint 9.14.0 to fix issue

* style: fix autofixable linting issues

* build(lint): use maxWarnings in angular.json

use pnpm run script then in CI/CD

* build: split between TS and Angular TS files

* build(lint): hoist @eslint/js for WebStorm to read

* build: convert to ESM

* build(ide): format .mjs files

* build(lint): ignore files from `.gitignore`

* build(lint): lint everything

* style: fix autofixable linter issues

* style: fix manual lint issues

--- a/angular.json
+++ b/angular.json
@@ -149,7 +149,8 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+            "lintFilePatterns": ["."],
+            "maxWarnings": 0
           }
         }
       }
@@ -158,6 +159,9 @@
   "cli": {
     "analytics": false,
     "packageManager": "pnpm",
-    "schematicCollections": ["@angular-eslint/schematics"]
+    "schematicCollections": [
+      "@angular-eslint/schematics",
+      "@angular-eslint/schematics"
+    ]
   }
 }
