--- a/package.json
+++ b/package.json
@@ -58,24 +58,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "18.2.12",
-    "@angular-eslint/builder": "18.4.0",
-    "@angular-eslint/eslint-plugin": "18.4.0",
-    "@angular-eslint/eslint-plugin-template": "18.4.0",
-    "@angular-eslint/schematics": "18.4.0",
-    "@angular-eslint/template-parser": "18.4.0",
     "@angular/cli": "18.2.12",
     "@angular/compiler-cli": "18.2.12",
+    "@eslint/compat": "1.2.3",
     "@lhci/cli": "0.14.0",
     "@types/compression": "1.7.5",
     "@types/express": "4.17.21",
     "@types/jasmine": "5.1.4",
     "@types/lodash-es": "4.17.12",
     "@types/node": "20.16.5",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
+    "angular-eslint": "18.4.0",
     "browser-sync": "3.0.2",
     "dotenv": "16.4.5",
-    "eslint": "8.57.1",
+    "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.1.6",
     "imagekit": "5.2.0",
@@ -89,6 +84,7 @@
     "ng-mocks": "14.13.1",
     "prettier": "3.3.3",
     "tsm": "2.3.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "typescript-eslint": "8.10.0"
   }
 }
