--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "pnpm dlx http-server dist/chrislb/website/browser -a localhost",
+    "start": "pnpm dlx http-server dist/chrislb/browser -a localhost",
     "start:dev": "ng serve",
     "start:dev:public": "pnpm run start:dev --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
