refactor: rename projects list page metadata JSON file

--- a/src/data/pages/projects-list.json
+++ b/src/data/pages/projects-list.json
@@ -1,5 +1,5 @@
 {
-  "name": "Projects",
+  "name": "Projects list",
   "slug": "projects",
   "title": "",
   "description": "Fashion designer and stylist, @christian_labu",
