--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
     "generate": "tsm scripts/src/generators/all-generators.ts",
     "generate:images-lists": "tsm scripts/src/generators/images-lists-generators.ts",
+    "generate:project-content": "tsm scripts/src/generators/generate-projects-content.ts",
     "generate:contents": "tsm scripts/src/generators/content-generators.ts",
     "generate:routes-file": "tsm scripts/src/generators/routes-file-generator.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
