--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "git-hooks": "husky",
     "cms-server": "npx decap-server",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
-    "generate": "tsm scripts/src/generators/all-generators.ts",
-    "generate:images-lists": "tsm scripts/src/generators/images-lists-generators.ts",
+    "generate": "tsm scripts/src/generators/generate-all.ts",
+    "generate:misc-images": "tsm scripts/src/generators/misc-images.ts",
     "generate:project-content": "tsm scripts/src/generators/generate-projects-content.ts",
     "generate:contents": "tsm scripts/src/generators/content-generators.ts",
     "generate:routes-file": "tsm scripts/src/generators/generate-routes-file.ts",
