refactor: turn list generators into functional style, remove unused

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "cms-server": "npx decap-server",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
     "generate": "tsm scripts/src/generators/generate-all.ts",
-    "generate:misc-images": "tsm scripts/src/generators/misc-images.ts",
+    "generate:misc-images": "tsm scripts/src/generators/generate-misc-images.ts",
     "generate:project-content": "tsm scripts/src/generators/generate-projects-content.ts",
-    "generate:contents": "tsm scripts/src/generators/content-generators.ts",
+    "generate:list-files": "tsm scripts/src/generators/generate-list-files.ts",
     "generate:routes-file": "tsm scripts/src/generators/generate-routes-file.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
     "lighthouse-ci": "npx @lhci/cli autorun",
