refactor: move content dir from "src" to "public"

--- a/.gitignore
+++ b/.gitignore
@@ -376,14 +376,11 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/angular,vim,visualstudiocode,node,webstorm+iml,macos,linux,windows,lighthouseci,dotenv
-src/content/*.json
-src/content/projects/**/*.json
+public/content/**/*.json
 src/data/*.json
 src/data/misc/images.json
 routes-file.txt
-package-lock.json
 # Manual edit
 # - Remove .idea from Angular. We want some IDE settings!
-# - Add generated JSON lists
-# - Add generated image files lists
+# - Add generated JSON files
 # - Add generated route file
