--- a/.github/workflows/reusable-deploy-cloudflare-pages.yml
+++ b/.github/workflows/reusable-deploy-cloudflare-pages.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Deploy preview status
+        if: github.event_name == 'pull_request'
         uses: ./.github/actions/deploy-preview-status
         with:
           state: 'success'
