ci: remove unused ref to inputs.ref

--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -36,7 +36,7 @@ jobs:
           cache-name: angular-cache
         with:
           path: .angular/cache
-          key: ${{ env.cache-name }}-${{ inputs.ref != '' && inputs.ref || github.ref }}
+          key: ${{ env.cache-name }}-${{ github.ref }}
           restore-keys: |
             ${{ env.cache-name }}
       - name: Build
