--- a/.github/workflows/reusable-deploy-github-pages.yml
+++ b/.github/workflows/reusable-deploy-github-pages.yml
@@ -5,10 +5,6 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_call:
-    inputs:
-      build-artifact-name:
-        required: true
-        type: string
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -34,7 +30,7 @@ jobs:
       - name: Download built app
         uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e # v4
         with:
-          name: ${{ inputs.build-artifact-name }}
+          name: build
       - name: Setup Pages
         uses: actions/configure-pages@983d7736d9b0ae728b81ab479565c72886d7745b # v5
       - name: Upload artifact
