--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "lodash-es": "4.17.21",
     "rxjs": "7.8.2",
     "swiper": "11.2.5",
-    "tslib": "2.8.1",
-    "zone.js": "0.14.10"
+    "tslib": "2.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "18.2.12",
