--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/node": "22.13.14",
     "angular-eslint": "18.4.3",
     "browser-sync": "3.0.3",
+    "cloudinary": "2.6.0",
     "dotenv": "16.4.7",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
