build: add path mappings for scripts

--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "git-hooks": "husky",
     "cms-server": "npx decap-server",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
-    "generate": "tsx scripts/src/generators/generate-all.ts",
-    "generate:misc-images": "tsx scripts/src/generators/generate-misc-images.ts",
-    "generate:project-content": "tsx scripts/src/generators/generate-projects-content.ts",
-    "generate:routes-file": "tsx scripts/src/generators/generate-routes-file.ts",
+    "generate": "pnpm rs scripts/src/generators/generate-all.ts",
+    "generate:misc-images": "pnpm rs scripts/src/generators/generate-misc-images.ts",
+    "generate:project-content": "pnpm rs scripts/src/generators/generate-projects-content.ts",
+    "generate:routes-file": "pnpm rs scripts/src/generators/generate-routes-file.ts",
+    "rs": "tsx --tsconfig scripts/tsconfig.json",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
     "lighthouse-ci": "lhci autorun",
     "serve:ssr:chrislb": "node dist/chrislb/server/server.mjs"
