--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "start:dev:public": "pnpm run start:dev --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "pnpm run /test:*./",
+    "test:unit": "ng test",
+    "test:scripts-tsc": "tsc -b scripts",
+    "test:lighthouse": "lhci autorun",
     "lint": "ng lint",
     "format:check": "prettier --check",
     "format:check:all": "pnpm run format:check -- .",
@@ -22,14 +25,11 @@
     "git-hooks": "husky",
     "cms-server": "npx decap-server",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
-    "generate": "pnpm rs scripts/src/generators/generate-all.ts",
-    "generate:misc-images": "pnpm rs scripts/src/generators/generate-misc-images.ts",
-    "generate:project-content": "pnpm rs scripts/src/generators/generate-projects-content.ts",
-    "generate:routes-file": "pnpm rs scripts/src/generators/generate-routes-file.ts",
-    "rs": "tsx --tsconfig scripts/tsconfig.json",
-    "validate-renovate-config": "npx -p renovate renovate-config-validator",
-    "lighthouse-ci": "lhci autorun",
-    "serve:ssr:chrislb": "node dist/chrislb/server/server.mjs"
+    "scripts:all": "tsx scripts/src/all.ts",
+    "scripts:misc-images": "tsx scripts/src/misc-images.ts",
+    "scripts:project-content": "tsx scripts/src/projects-content.ts",
+    "scripts:routes-file": "tsx scripts/src/routes-file.ts",
+    "validate-renovate-config": "npx -p renovate renovate-config-validator"
   },
   "dependencies": {
     "@angular/animations": "18.2.12",
