--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -5,13 +5,13 @@ build: prebuild
 	cd .. && pnpm run build
 
 prebuild:
-	cd .. && pnpm run generate
+	cd .. && pnpm run scripts:all
 
 install:
 	# Despite it's enabled by default on CI. This allows to mock CI locally
 	# https://pnpm.io/cli/install#--frozen-lockfile
 	pnpm install --frozen-lockfile
 
-test:
-	pnpm run test --browsers=ChromeHeadless \
+unit-test:
+	pnpm run test:unit --browsers=ChromeHeadless \
 		--no-watch --no-progress --reporters progress --code-coverage
