--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -12,8 +12,8 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Setup
         uses: ./.github/actions/setup
-      - name: Generate empty misc images
-        run: mkdir -p data/generated && echo '{}' > 'data/generated/misc-images.json'
+      - name: Generate mock data
+        run: cd .ci && make mock-data
       - name: Run unit tests
         run: cd .ci && make unit-test
 
@@ -26,5 +26,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Setup
         uses: ./.github/actions/setup
+      - name: Generate mock data
+        run: cd .ci && make mock-data
       - name: Compile scripts
         run: pnpm run test:scripts-tsc
